Fixed planning tabs spacing problem

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -700,90 +700,6 @@ body {
     margin-bottom: 0;
   }
   
-  .class .php-email-form {
-    box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-    padding: 30px;
-    background: #fff;
-  }
-  
-  .class .php-email-form .validate {
-    display: none;
-    color: red;
-    margin: 0 0 15px 0;
-    font-weight: 400;
-    font-size: 13px;
-  }
-  
-  .class .php-email-form .error-message {
-    display: none;
-    color: #fff;
-    background: #ed3c0d;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-  }
-  
-  .class .php-email-form .sent-message {
-    display: none;
-    color: #fff;
-    background: #18d26e;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-  }
-  
-  .class .php-email-form .loading {
-    display: none;
-    background: #fff;
-    text-align: center;
-    padding: 15px;
-  }
-  
-  .class .php-email-form .loading:before {
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    margin: 0 10px -6px 0;
-    border: 3px solid #18d26e;
-    border-top-color: #eee;
-    -webkit-animation: animate-loading 1s linear infinite;
-    animation: animate-loading 1s linear infinite;
-  }
-  
-  .class .php-email-form input,
-  .class .php-email-form textarea {
-    border-radius: 0;
-    box-shadow: none;
-    font-size: 14px;
-  }
-  
-  .class .php-email-form input::focus,
-  .class .php-email-form textarea::focus {
-    background-color: #129b00;
-  }
-  
-  .class .php-email-form input {
-    padding: 20px 15px;
-  }
-  
-  .class .php-email-form textarea {
-    padding: 12px 15px;
-  }
-  
-  .class .php-email-form button[type="submit"] {
-    background: #129b00;
-    border: 0;
-    padding: 10px 24px;
-    color: #fff;
-    transition: 0.4s;
-  }
-  
-  .class .php-email-form button[type="submit"]:hover {
-    background: #fdd067;
-  }
-  
   @-webkit-keyframes animate-loading {
     0% {
       transform: rotate(0deg);
@@ -909,69 +825,7 @@ body {
   --------------------------------------------------------CUSTOM STYLES-----------------------------------------------------------------------
   --------------------------------------------------------------------------------------------------------------------------------------------
   */
-  
-  /* Schedule Timeline */
-  ul.timeline {
-    list-style-type: none;
-    position: relative;
-  }
-  ul.timeline:before {
-    content: " ";
-    background: #d4d9df;
-    display: inline-block;
-    position: absolute;
-    left: 29px;
-    width: 2px;
-    height: 100%;
-    z-index: 400;
-  }
-  ul.timeline > li {
-    margin: 20px 0;
-    padding-left: 20px;
-  }
-  ul.timeline > li:before {
-    content: " ";
-    background: white;
-    display: inline-block;
-    position: absolute;
-    border-radius: 50%;
-    border: 3px solid #129b00;
-    left: 20px;
-    width: 20px;
-    height: 20px;
-    z-index: 400;
-  }
-  
-  .timeline h3 {
-    font-family: "Cairo", sans-serif;
-    font-weight: bold;
-  }
-  
-  /* Schedule Modal */
-  .modal-body h3 {
-    font-size: 18px;
-  }
-  
-  .modal-body {
-    font-family: "Lato", sans-serif;
-  }
-  
-  .modal-title {
-    text-align: center;
-    font-family: "Cairo", sans-serif;
-    font-weight: bold;
-  }
-  
-  .hr-cp{
-    color: #bd004d;
-  }
-
-/*
-  --------------------------------------------------------------------------------------------------------------------------------------------
-  --------------------------------------------------------CUSTOM STYLES-----------------------------------------------------------------------
-  --------------------------------------------------------------------------------------------------------------------------------------------
-  */
-  
+    
   /* Planning Style */
   
   .modal-body h3 {
@@ -1039,64 +893,7 @@ body {
   }
   
   /*Course Detail Style*/
-  /* Schedule Timeline */
-  ul.timeline {
-    list-style-type: none;
-    position: relative;
-  }
-  ul.timeline:before {
-    content: " ";
-    background: #d4d9df;
-    display: inline-block;
-    position: absolute;
-    left: 29px;
-    width: 2px;
-    height: 100%;
-    z-index: 400;
-  }
-  ul.timeline > li {
-    margin: 20px 0;
-    padding-left: 20px;
-  }
-  ul.timeline > li:before {
-    content: " ";
-    background: white;
-    display: inline-block;
-    position: absolute;
-    border-radius: 50%;
-    border: 3px solid #129b00;
-    left: 20px;
-    width: 20px;
-    height: 20px;
-    z-index: 400;
-  }
   
-  .timeline h3 {
-    font-family: "Cairo", sans-serif;
-    font-weight: bold;
-  }
-  
-  /* Schedule Modal */
-  .modal-body h3 {
-    font-size: 18px;
-  }
-  
-  .modal-body {
-    font-family: "Lato", sans-serif;
-  }
-  
-  .modal-title {
-    text-align: center;
-    font-family: "Cairo", sans-serif;
-    font-weight: bold;
-  }
-  
-  .hr-cp{
-    color: #bd004d;
-  }
-
-  /*COURSE DETAIL STYLES*/
-
 .vid {
   position: relative;
   padding-bottom: 56.25%;
